--- a/www/js/dashboard/partials/dashboard.html
+++ b/www/js/dashboard/partials/dashboard.html
@@ -3,37 +3,66 @@
         {{ dashboard.breadcrumb }}
     </h1>
 </section>
-<div>
-    <ng-map zoom="13" center="1600 pennsylvania ave, washington DC" style="height:600px"
-            on-center-changed="centerCustomMarker()">
-        <marker position="10 pennsylvania ave, washington DC" on-click="dashboard.showCustomMarker()"></marker>
-        <marker position="2600 pennsylvania ave, washington DC" on-click="dashboard.showCustomMarker()"></marker>
-        <custom-marker id="foo" position="10 pennsylvania ave, washington DC" on-click="dashboard.closeCustomMarker()">
-            <div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="box box-danger">
-                            <div class="box-header with-border">
-                                <h3 class="box-title">UNICEF</h3>
-
-                                <div class="box-tools pull-right">
-                                    <span class="label label-danger">8 New Members</span>
-                                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
-                                            class="fa fa-minus"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i
-                                            class="fa fa-times"></i>
-                                    </button>
+<section class="content">
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Organizations</h3>
+                    <input type="text" placeholder="search" ng-model="dashboard.search" class="form-control">
+                    <div class="box-body">
+                        <ul class="products-list product-list-in-box">
+                            <li class="item"
+                                ng-repeat="organization in dashboard.organizations | filter: dashboard.search">
+                                <div class="product-img">
+                                    <img src="img/unicef.png" alt="Product Image">
                                 </div>
-                            </div>
-                            <!-- /.box-header -->
-                            <div class="box-body no-padding">
-                                <ul class="products-list product-list-in-box clearfix">
-                                    <li class="item">
-                                        <div class="product-img">
-                                            <img src="img/unicef.png" alt="Product Image">
+                                <div class="product-info">
+                                    <a ui-sref="/organization" class="product-title">{{organization.name}}</a>
+                        <span class="product-description">
+                          {{organization.description}}
+                        </span>
+                                    <small>lat: {{organization.lat }} long: {{organization.long}}</small>
+                                </div>
+                            </li><!-- /.item -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <ng-map zoom="13" center="1600 pennsylvania ave, washington DC" style="height:600px"
+                    on-center-changed="centerCustomMarker()">
+                <marker position="10 pennsylvania ave, washington DC" on-click="dashboard.showCustomMarker()"></marker>
+                <marker position="2600 pennsylvania ave, washington DC"
+                        on-click="dashboard.showCustomMarker()"></marker>
+                <custom-marker id="foo" position="10 pennsylvania ave, washington DC"
+                               on-click="dashboard.closeCustomMarker()">
+                    <div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="box box-danger">
+                                    <div class="box-header with-border">
+                                        <h3 class="box-title">UNICEF</h3>
+
+                                        <div class="box-tools pull-right">
+                                            <span class="label label-danger">8 New Members</span>
+                                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
+                                                    class="fa fa-minus"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i
+                                                    class="fa fa-times"></i>
+                                            </button>
                                         </div>
-                                        <div class="product-info">
+                                    </div>
+                                    <!-- /.box-header -->
+                                    <div class="box-body no-padding">
+                                        <ul class="products-list product-list-in-box clearfix">
+                                            <li class="item">
+                                                <div class="product-img">
+                                                    <img src="img/unicef.png" alt="Product Image">
+                                                </div>
+                                                <div class="product-info">
                                             <span class="product-description">
                                               <span>
 
@@ -44,20 +73,22 @@
 
                                               </span>
                                             </span>
-                                        </div>
-                                    </li>
-                                </ul>
-                                <!-- /.users-list -->
+                                                </div>
+                                            </li>
+                                        </ul>
+                                        <!-- /.users-list -->
+                                    </div>
+                                    <!-- /.box-body -->
+                                    <div class="box-footer text-center">
+                                        <a ui-sref="/organization" class="uppercase">Dowiedz się więcej</a>
+                                    </div>
+                                    <!-- /.box-footer -->
+                                </div>
                             </div>
-                            <!-- /.box-body -->
-                            <div class="box-footer text-center">
-                                <a ui-sref="/organization" class="uppercase">Dowiedz się więcej</a>
-                            </div>
-                            <!-- /.box-footer -->
                         </div>
                     </div>
-                </div>
-            </div>
-        </custom-marker>
-    </ng-map>
-</div>
+                </custom-marker>
+            </ng-map>
+        </div>
+    </div>
+</section>
