--- a/www/js/dashboard/partials/dashboard.html
+++ b/www/js/dashboard/partials/dashboard.html
@@ -55,17 +55,13 @@
                                         <h3 class="box-title">{{dashboard.selected.name}}</h3>
 
                                         <div class="box-tools pull-right">
-                                            <span class="label label-danger">8 New Members</span>
-                                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
-                                                    class="fa fa-minus"></i>
-                                            </button>
                                             <button type="button" class="btn btn-box-tool" data-widget="remove"><i
                                                     class="fa fa-times"></i>
                                             </button>
                                         </div>
                                     </div>
                                     <!-- /.box-header -->
-                                    <div class="box-body no-padding">
+                                    <div class="box-body with-border">
                                         <ul class="products-list product-list-in-box clearfix">
                                             <li class="item">
                                                 <div class="product-img">
