--- a/www/js/organization/partials/create.html
+++ b/www/js/organization/partials/create.html
@@ -8,30 +8,21 @@
         <!-- Left col -->
         <div class="col-md-8">
             <div class="box box-primary">
-                <div class="box-header with-border">
-                    <h3 class="box-title">Quick Example</h3>
-                </div><!-- /.box-header -->
+
                 <!-- form start -->
                 <form role="form">
                     <div class="box-body">
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                            <label for="name">Organization name</label>
+                            <input type="text" class="form-control" id="name" placeholder="name">
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1"
-                                   placeholder="Password">
+                            <label for="desc">Organization logo</label>
+                            <textarea name="desc" id="desc" class="form-control"></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="exampleInputFile">File input</label>
-                            <input type="file" id="exampleInputFile">
-                            <p class="help-block">Example block-level help text here.</p>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Check me out
-                            </label>
+                            <label for="logo">Organization logo</label>
+                            <input type="file" id="logo">
                         </div>
                     </div><!-- /.box-body -->
 
@@ -41,11 +32,6 @@
                 </form>
             </div>
 
-            <!-- /.box -->
         </div>
-        <!-- /.col -->
-
-
-        <!-- /.col -->
     </div>
 </section>
