login and register layouts

--- a/www/js/organization/partials/show.html
+++ b/www/js/organization/partials/show.html
@@ -11,6 +11,9 @@
             <div class="box box-primary">
                 <div class="box-header with-border">
                     <h3 class="box-title">{{organization.details.name}}</h3>
+                    <button class="pull-right btn btn-danger btn-flat" ng-click="joinOrganization('user')">
+                        <i class="fa fa-users"></i> Join
+                    </button>
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body with-border">
