--- a/www/js/dashboard/partials/dashboard.html
+++ b/www/js/dashboard/partials/dashboard.html
@@ -18,7 +18,7 @@
                                     <img src="img/unicef.png" alt="Product Image">
                                 </div>
                                 <div class="product-info">
-                                    <a ui-sref="organizationDetails({id: organization.id})"
+                                    <a ui-sref="organizationDetails({id: $index})"
                                        class="product-title">{{organization.name}}</a>
                                     <span class="product-description">
                                       {{organization.description}}
@@ -82,7 +82,7 @@
                                     </div>
                                     <!-- /.box-body -->
                                     <div class="box-footer text-center">
-                                        <a ui-sref="organizationDetails({id: dashboard.selected.id})" class="uppercase">Dowiedz się więcej</a>
+                                        <a ui-sref="organizationDetails({id: dashboard.selected.index})" class="uppercase">Dowiedz się więcej</a>
                                     </div>
                                     <!-- /.box-footer -->
                                 </div>
