Follow instead of Join on org page

--- a/www/js/organization/partials/show.html
+++ b/www/js/organization/partials/show.html
@@ -12,7 +12,7 @@
                 <div class="box-header with-border">
                     <h3 class="box-title">{{organization.details.name}}</h3>
                     <button class="pull-right btn btn-danger btn-flat" ng-click="organization.join()">
-                        <i class="fa fa-users"></i> Join
+                        <i class="fa fa-users"></i> Follow
                     </button>
                 </div>
                 <!-- /.box-header -->
