--- a/www/js/common/partials/register.html
+++ b/www/js/common/partials/register.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="register-box-body">
-        <p class="login-box-msg">Register a new membership</p>
+        <p class="login-box-msg">Register as a new member</p>
         <form action="../../index.html" method="post">
             <div class="form-group has-feedback">
                 <input type="text" class="form-control" placeholder="Full name">
